--- a/rrimageview/src/main/res/layout/activity_main.xml
+++ b/rrimageview/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <com.clark.rrimageview.RRImageview
+            <com.clark.rrimageview.BateImageview
                 android:id="@+id/gado"
                 android:layout_width="200dp"
                 android:layout_height="300dp"
